# reckonup

./: .gitignore  package.json  pyproject.toml
client/: codegen.yml  models.ts  next.config.js  package.json
client/components/: auth.tsx  layout.tsx  loading.tsx  navigation.tsx  nothing.tsx
client/gql/: schema.json  types.ts
client/lib/: apollo.ts  system.ts  travel-expense.ts
client/locales/: en.ts  index.ts  ja.ts
client/pages/: _app.tsx  index.tsx  list.tsx  login.tsx  profile.tsx  test.tsx  test2.tsx
client/styles/: business-trip.module.scss  navigation.module.scss
reckonup/: db.sqlite3  manage.py
reckonup-client/: package-lock.json  package.json  tsconfig.json  webpack.config.dev.js  webpack.config.js
reckonup-client/common/: atom.ts  auth.ts  config.ts  types.ts
reckonup-client/component/: debug-observer.tsx  layout.tsx  loading.tsx  login-check.tsx  navigation.tsx
reckonup-client/libs/: common.ts  system.ts  travel-expense.ts
reckonup-client/locales/: en.ts  index.ts  ja.ts
reckonup-client/logics/: auth.ts  system.ts  travel-expense.ts
reckonup-client/models/: auth.ts  system.ts  travel-expense.ts  user.ts
reckonup-client/pages/: _app.tsx  change-password.tsx  index.tsx  list.tsx  login.tsx  profile.tsx  signup.tsx  test.tsx
reckonup-client/src/: index.html  (+3 more)
server/: pyproject.toml
server/server/: schema.py  settings.py  urls.py
server/system/: admin.py  managers.py  models.py  schema.py
server/system/fixtures/: system_master.yaml
server/system/migrations/: 0001_initial.py
server/travel_expense/: admin.py  models.py  schema.py
server/travel_expense/fixtures/: travel_expense_fixture.yaml
server/travel_expense/migrations/: 0001_initial.py
(+63 files in other folders)
