[tool.poetry]
name = "reckonup"
version = "0.1.0"
description = ""
authors = ["Yoshio Miyamae <yoshio.miyamae@famoce-succellion.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
django = "^3.0.8"
djangorestframework = "^3.11.0"
pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pylint = "^2.5.3"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
